* Added Resource class, a common super-class of BNode, Graph, Literal and URIRef.
* Implemented Resource.parse and variations for sub-classes to parse N3-coded resources.
* Literal#typed
  * Namespaces option now is {prefix => href} rather than {prefix => Namespace}.
  * Add all in-scope namespaces, not just those that seem to be used.
* RDFa Parser
  * Upgrade for changes to RDFa 1.1 test suite
  * For SVG, allow use of xml:base for non-HTML languages
  * No longer pass vocabularies, prefixes or terms when creating XMLLiterals. Only namespaces derived via xmlns are passed to Literal#typed.
* SQLite3Store
  * Basic support for using with ActiveRecord: #initialize _configuration_ can take a _connection_ option, using ActiveRecord::Base.connection.raw_connection
  * If result set is returned as a hash, change back to an array (needed, as rails sets results_as_hash attribute on DB)

=== 0.5.9.1
* Fix minor graph property caching bug relating to manipulation of sequences.

=== 0.5.9
* Update to 2010-10-26 LC version of RDFa Core 1.1
  * Deep processing of XMLLiterals
  * Case sensitive Terms
  * Updated processor graph vocabulary

=== 0.5.8.2
* Don't create unnecessary namespaces when serializing RDF/XML.
* Don't use regexp to substitute base URI in URI serialization.
* Added profile_graph option to RdfaParser#parse. This MUST be a ConjunctiveGraph and will be used to save profiles that are encountered.
  * Fixme, for now, retrieval should include HTTP headers and perform appropriate HTTP cache control and check for potential updates.
* Added ConjunctiveGraph#add_quad. Adds a quad from the intended subject, predicate, object, and context.
    @example
     g = Graph.new
     cg = ConjunctiveGraph.new
     cg.add_quad(BNode.new, URIRef.new("http://xmlns.com/foaf/0.1/knows"), BNode.new, g)
     => results in the triple being added to g

=== 0.5.8
* Remove dependency on whatlanguage.
* Added support for Processor Graphs.